p2/app2/app2_service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: app-two-service
  spec:
    ports:
    - name: tcp
      port: 80
      targetPort: 8080
    selector:
      app: app-two
