p2/app2/app2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-two-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-two-service
            port: 
              number: 80
